--- a/scripts/requirements.txt
+++ b/scripts/requirements.txt
@@ -1,8 +1,8 @@
-matplotlib
-natsort
-numpy
-scipy
-svgpath2mpl
-svgpathtools
-tabulate
-Unidecode
+matplotlib==3.7.2
+natsort==8.4.0
+numpy==1.25.2
+scipy==1.11.2
+svgpath2mpl==1.0.0
+svgpathtools==1.6.1
+tabulate==0.9.0
+Unidecode==1.3.6
